# game_2048

./: .env.example  .gitignore  2048 requirements.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
src/game2048/: __init__.py  config.py  logging_setup.py
src/game2048/ai/: __init__.py  expectimax.py  heuristics.py  registry.py  solver.py
src/game2048/ai/llm/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/game2048/engine/: __init__.py  board.py  game.py  rules.py
src/game2048/web/: __init__.py  app.py  solver_runner.py
src/game2048/web/static/: app.js  style.css
src/game2048/web/templates/: index.html
tests/: conftest.py  test_engine_endgame.py  test_engine_game.py  test_engine_moves.py  test_engine_spawn.py  test_expectimax.py  test_llm_adapters.py  test_security_redaction.py  test_web_api.py
